autogen files & fixed layout issues

--- a/src/js/main.css
+++ b/src/js/main.css
@@ -1,5 +1,8 @@
-body {
+
+html, body {
   background-color: black;
+  min-height: 100%;
+  height: 100%;
 }
 
 #terminal {
